Updated master's readme